// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array of options objects when a format option is provided, do not merge the provided array with the default format array 1`] = `
[
  {
    "format": [
      "cjs",
    ],
  },
]
`;

exports[`array of options objects when a provided option match a default option, override the default option 1`] = `
[
  {
    "dts": false,
    "entry": [
      "./toto",
    ],
  },
  {
    "clean": false,
    "dts": true,
    "entry": [
      "./toto",
    ],
  },
]
`;

exports[`array of options objects when options are provided, every object included in the array are merged with the default options 1`] = `
[
  {
    "clean": true,
    "dts": true,
  },
  {
    "clean": false,
    "dts": true,
  },
]
`;

exports[`function when a format option is provided, do not merge the provided array with the default format array 1`] = `
{
  "format": [
    "cjs",
  ],
}
`;

exports[`function when a function is provided, merge the options returned by the function with the default options 1`] = `
{
  "clean": true,
  "dts": true,
}
`;

exports[`function when a provided option match a default option, override the default option 1`] = `
{
  "dts": false,
  "entry": [
    "./toto",
  ],
}
`;

exports[`single object of options when a format option is provided, do not merge the provided array with the default format array 1`] = `
{
  "format": [
    "cjs",
  ],
}
`;

exports[`single object of options when a provided option match a default option, override the default option 1`] = `
{
  "dts": false,
  "entry": [
    "./toto",
  ],
}
`;

exports[`single object of options when options are provided, options are merged with the default options 1`] = `
{
  "clean": true,
  "dts": true,
}
`;
